--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "jquery": "^3.7.1",
     "vue": "^2.7.14",
+    "vue-router": "^2.8.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
